and it is ready

--- a/popup.html
+++ b/popup.html
@@ -13,19 +13,17 @@
         <input type="text" id="search" placeholder="Search prompts..." />
         <div id="prompt-list"></div> 
         <!-- Add Custom Prompt Modal -->
-        <button id="add-prompt-btn">➕ Add Custom Prompt</button>
+        <button id="add-prompt-btn" >➕ Add Custom Prompt</button>
         <div id="add-prompt-modal" class="hidden">
             <textarea id="custom-prompt" placeholder="Write your custom prompt here..."></textarea>
-            <button id="save-prompt-btn">💾 Save Prompt</button>
-            <button id="close-modal-btn">❌ Cancel</button>
+            <button id="save-prompt-btn" class="button-design">💾 Save Prompt</button>
+            <button id="close-modal-btn" class="button-design">❌ Cancel</button>
         </div>
 
         <footer>
-            <button id="theme-toggle">🌗 Toggle Theme</button>
-            <button id="download-json">📥 Export JSON</button>
-            <button id="show-favourites-btn">Show Favourite Prompts</button>
-            <button id="back-btn" style="display: none;">Back</button>
-
+            <button id="download-json" class="button-design">📥 Export JSON</button>
+            <button id="show-favourites-btn" class="button-design">Show Favourite Prompts</button>
+            <button id="back-btn" class="button-design" style="display: none;">⬅ Go Back</button>
         </footer>
     </div>
 
